bk_ida/gccida/g2/emit_cmp_and_jump_insns
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/emit_cmp_and_jump_insns/src/optabs.c:3819:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code comparison, 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/emit_cmp_and_jump_insns/src/optabs.c:3821:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode, 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/emit_cmp_and_jump_insns/src/optabs.c:3827:1: error: must use 'enum' tag to refer to type 'mode_class'
mode_class v10; // r14d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/emit_cmp_and_jump_insns/src/machmode.h:52:30: note: enum 'mode_class' is hidden by a non-type declaration of 'mode_class' here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/emit_cmp_and_jump_insns/src/optabs.c:3840:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v23; // r15d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/emit_cmp_and_jump_insns/src/optabs.c:3861:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v44; // ebp 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/emit_cmp_and_jump_insns/src/optabs.c:3878:1: error: must use 'enum' tag to refer to type 'mode_class'
mode_class v61; // [rsp+10h] [rbp-48h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/emit_cmp_and_jump_insns/src/machmode.h:52:30: note: enum 'mode_class' is hidden by a non-type declaration of 'mode_class' here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/emit_cmp_and_jump_insns/src/optabs.c:3901:7: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v10 = mode_class_0[mode]; 
      ^~~~~~~~~~~~
      mode_class
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/emit_cmp_and_jump_insns/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/emit_cmp_and_jump_insns/src/optabs.c:3930:17: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v13 = ( __int64)v8[1]; 
                ^~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/emit_cmp_and_jump_insns/src/optabs.c:3935:17: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v16 = ( __int64)op1[1]; 
                ^~~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/emit_cmp_and_jump_insns/src/optabs.c:3946:32: error: use of undeclared identifier 'insn_data_0'
mode = *( ( unsigned __int16 *)insn_data_0[1203].operand + 8); 
                               ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/emit_cmp_and_jump_insns/src/optabs.c:4139:58: error: invalid suffix 'xmode' on integer constant
emit_library_call( v55, LCT_CONST_MAKE_BLOCK, *(short *)0xmode, 2, v40); 
                                                         ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/emit_cmp_and_jump_insns/src/optabs.c:4140:31: error: invalid suffix 'xmode' on integer constant
op1 = gen_reg_rtx( *(short *)0xmode); 
                              ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/emit_cmp_and_jump_insns/src/optabs.c:4141:38: error: invalid suffix 'xmode' on integer constant
v56 = hard_libcall_value( *(short *)0xmode); 
                                     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/emit_cmp_and_jump_insns/src/optabs.c:4143:17: error: invalid suffix 'xmode' on integer constant
v9 = *(short *)0xmode; 
                ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/emit_cmp_and_jump_insns/src/optabs.c:4145:19: error: invalid suffix 'xmode' on integer constant
mode = *(short *)0xmode; 
                  ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/emit_cmp_and_jump_insns/src/optabs.c:4153:58: error: invalid suffix 'xmode' on integer constant
emit_library_call( v53, LCT_CONST_MAKE_BLOCK, *(short *)0xmode, 2, v40); 
                                                         ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/emit_cmp_and_jump_insns/src/optabs.c:4154:31: error: invalid suffix 'xmode' on integer constant
op1 = gen_reg_rtx( *(short *)0xmode); 
                              ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/emit_cmp_and_jump_insns/src/optabs.c:4155:38: error: invalid suffix 'xmode' on integer constant
v54 = hard_libcall_value( *(short *)0xmode); 
                                     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/emit_cmp_and_jump_insns/src/optabs.c:4157:17: error: invalid suffix 'xmode' on integer constant
v9 = *(short *)0xmode; 
                ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/emit_cmp_and_jump_insns/src/obj/optabs.o] Error 1
